# cyber-spark-data-connectors

./: .gitignore  AGENTS.md  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: onpush.yml  release.yaml
cyber_connectors/: AzureMonitor.py  AzureMonitorWriter.py  MsSentinel.py  Pcap.py  RestApi.py  Splunk.py  SplunkHec.py  SplunkHecWriter.py  __init__.py  common.py
docs/plans/: 2025-01-01-splunk-reader-design.md  2026-05-10-pcap-tracked-file-source-design.md
docs/superpowers/plans/: 2026-05-10-pcap-data-source.md
docs/superpowers/specs/: 2026-05-31-python-310-minimum-design.md  2026-05-31-ruff-mypy-cleanup-design.md  2026-05-31-uv-migration-design.md
tests/: README.md  __init__.py  test_common.py  test_mssentinel.py  test_mssentinel_reader.py  test_mssentinel_stream_reader.py  test_pcap.py  test_pcap_stream_reader.py  test_restapi.py  test_splunk.py
tests/samples/json/: zeek-http.jsonl
utils/: README.md  http_server.py
