[project]
name = "cyber-spark-data-connectors"
version = "0.0.7"
description = "Cybersecurity-related custom data connectors for Spark (readers and writers)."
readme = "README.md"
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Alex Ott", email = "alexott@gmail.com" }
]
keywords = ["cybersecurity", "apache spark", "spark", "splunk", "log analytics", "ms sentinel"]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "requests>=2.32.5,<3.0.0",
    "azure-monitor-ingestion>=1.1.0,<2.0.0",
    "azure-identity>=1.25.1,<2.0.0",
    "azure-monitor-query>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/alexott/cyber-spark-data-connectors"
Issues = "https://github.com/alexott/cyber-spark-data-connectors/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.2,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-spark>=0.8.0,<0.9.0",
    "ruff>=0.15.0,<0.16.0",
    "pyspark[connect,sql]==4.0.2",
    "grpcio>=1.67.0",
    "grpcio-status>=1.67.0",
    "googleapis-common-protos>=1.65.0",
    "chispa>=0.11.1,<0.12.0",
    "mypy>=1.19.1,<3.0.0",
    "types-requests==2.32.4.20260107",
    "pyarrow>=21.0.0,<22.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cyber_connectors"]

[tool.hatch.build.targets.sdist]
include = [
    "/cyber_connectors",
    "/README.md",
    "/LICENSE",
    "/NOTICE",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "notebooks",
    "tests",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.8
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
"D103",  # No docstring in public function
"D401",  # First line of docstring should be in imperative mood
"N812",  # Lowercase `functions` imported as non-lowercase `F`
"F405",  # `assert_df_equality` may be undefined, or defined from star imports
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"cyber_connectors/MsSentinel.py" = ["D100", "D101", "D102", "D107", "N999", "N802", "N803"]
"cyber_connectors/RestApi.py" = ["D101", "D102", "D107", "N999", "N802", "N803"]
"cyber_connectors/Splunk.py" = ["D100", "D101", "D102", "D107", "D419", "N999", "N802", "N803"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
